@@ -1,7 +1,7 @@
 LSB-V3 README
 
 The scripts contianed in this directory are a complete rewrite of the
-boot scripts from LFS-6.1 (updated for LFS-SVN about 2008-04-13).  As is
+boot scripts from LFS-6.1 (updated for LFS-SVN about 2008-05-31).  As is
 usually the case with a rewrite, there have been many changes:
 
 LSB Version 3.1 Compliant Scripts - Immediately noticable are the LSB headers
@@ -16,21 +16,21 @@ the messages are created from parts and only written to the screen in a
 single command, so maybe no help at all WRT translated boot messages.
 
 LSB 3.1 Omissions - Unfortunately, this package is not completely LSB
-compliant as it lacks install-initd and remove-initd programs.  The current
+compliant as it lacks install_initd and remove_initd programs.  The current
 popular flavor of these programs is written in Python, which, as you should
 know, is not installed until BLFS.  I began work on a bash implementation,
 and have provided the needed functions to parse the LSB headers in the
 manage-functions script (insalled by default into /lib/lsb).  Unfortunately,
-I have yet to complete the actual install-initd and remove-initd scripts,
-however, I do have an almost complete install-initd kept locally.  I am
-currently working on a separate script to completely rewrite the symlinks
-should LFS default values not prove sufficient when working with scripts in
-the wild.  I have not included either here because they are not yet complete
-or thoroughly tested, and due to the development process of lfs-bootscritps,
-would be included in a release tarball.  If you would like to assist with the
-development of these scripts, or would even just like to see what I have so
-far, please email me privately.  Of course, feel free to write your own if you
-do not like the manage-fucntions script (or bash).
+I have yet to complete the actual install_initd and remove_initd scripts,
+and have found bash to an unsuitable language to write a complete reorder
+due to the ammount of time for recursive funtions and loops to complete.
+Dan Nicholson has began work on initd-tools, a C implementaion of
+install_initd and remove_initd.  At the time of writing (20080830) the
+programs themselves are not yet functional, however, the libraries used
+to parse the scripts and provide the dependency order are working as
+expected.  I would expect a completely standards compliant set of programs,
+written in C very soon. Dans work can be viewed via git-web at
+http://gitweb.dwcab.com/?p=initd-tools.git;a=summary .
 
 Distribution Independent - this original goal for the LFS scripts has been
 stretched even further by providing both a global rc config file that
@@ -62,25 +62,25 @@ second delay in the boot process (so that you have time to press a button
 to select interactive mode).  This time value, and the option prompt itself,
 is configurable in the /etc/sysconfig/rc.site file.
 
-RC_BASE - The base directory for the bootscripts is now /etc, not
+Path changes - The base directory for the bootscripts is now /etc, not
 /etc/rc.d.  This is mostly to conform with mainstream distros, but other
 boot methods do expect that /etc/init.d is the location of bootscripts.
 Some distros provide a rc.d direcorty with symlinks to the rc*.d and init.d
 directories, I have not done that.  /etc is the location now, get your
 flying fingers accustomed to it!  Of course, this is still configurable in
 /etc/sysconfig/rc.site, and if the change is too great, I'll put it back.
+I've also removed the rcsysinit.d and replaced it with rcS.d.
 
 LSB Functions - The previous lfs-bootscripts sourced a functions file
 located at /etc/rc.d/init.d/functions.  This file has been renamed
 $distro-functions to segregate it from the old. The name is configurable
-by the rc.site configuration file.  Both old and new bootscripts can be
-used simultaneously in a SYS-V setup (with proper symlinks in place).
-LSB defined functions are used where possible, but the $distro-functions file
-provides, easy to use wraper functions that
-start/stop/reload/force-reload/restart programs, evaluate the numerical
-LSB return values, and print status messages to the screen.  Both LFS
-functions and LSB functions are documented directly in the scritps located
-at /etc/init.d/$distro-functions and /lib/lsb/init-functions respectively.
+by the rc.site configuration file.  LSB defined functions are used where
+possible, but the $distro-functions file provides, easy to use wraper
+functions that start/stop/reload/force-reload/restart programs, evaluate
+the numerical LSB return values, and print status messages to the screen.
+Both LFS functions and LSB functions are documented directly in the scritps
+located at /etc/init.d/$distro-functions and /lib/lsb/init-functions
+respectively.
 
 Pretier - Yeah, I just couldn't handle all the grey text...  By default,
 successful boot messages are prefixed with a single green astrik character,
