@@ -7,7 +7,7 @@
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Checks local filesystems before mounting.
 # Description:         Checks local filesystmes before mounting.
