@@ -7,7 +7,7 @@
 # Should-Start:        $local_fs
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Sets up a localised console.
 # Description:         Sets up fonts and language settings for the user's 
