@@ -3,11 +3,11 @@
 
 ### BEGIN INIT INFO
 # Provides:            modules
-# Required-Start:      mountkernfs
-# Should-Start:        sysctl
+# Required-Start:      mountkernfs sysctl
+# Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Loads required modules.
 # Description:         Loads modules listed in /etc/sysconfig/modules.
