@@ -7,7 +7,7 @@
 # Should-Start:        $local_fs
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Replays failed uevents and creates additonal devices.
 # Description:         Replays any failed uevents that were skipped due to
